kubernetes/applications/ceph-storage/manifests/pastefy/pastefy-namespace.yml
# =====================================
# 0. Namespace
# =====================================
---
apiVersion: v1
kind: Namespace
metadata:
  name: pastefy
