kubernetes/applications/ceph-storage/manifests/pastefy/pastefy-ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pastefy-ingress
  namespace: pastefy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pastefy.example.com
  rules:
    - host: pastefy.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pastefy-app
                port:
                  number: 80
